# musclequant

./: .gitignore  CITATION.cff  LICENSE  MuscleQuant.spec  README.md  environment.yml  pyproject.toml  requirements.txt  third_party_licenses.md
.github/workflows/: build-macos.yml  build-windows.yml
musclequant/: __init__.py  __main__.py  musclequant_gui.py
