[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musclequant"
version = "0.1.0"
description = "Napari-based IHC fluorescence quantification (Cellpose + Laminin segmentation)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Akash Agrawal" }
]
dependencies = [
  "numpy",
  "pandas",
  "tifffile",
  "scikit-image",
  "scipy",
  "torch",          # you can pin or choose CPU-only variants as needed
  "cellpose",
  "magicgui",
  "napari[all]",
  "qtpy",
  "pyqt5"           # or "pyside2" depending on your stack
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/musclequant"
Issues   = "https://github.com/YOUR_USERNAME/musclequant/issues"

[project.scripts]
musclequant = "musclequant.gui:main"
